cm4all-beng-proxy (0.6.11) unstable; urgency=low

  * 

 --

cm4all-beng-proxy (0.6.10) unstable; urgency=low

  * parser: finish tag before bailing out
  * http-request: allow URLs without path component
  * fork: clear event in read() method
  * istream-file: pass options O_CLOEXEC|O_NOCTTY to open()
  * response: check if the "Host" request header is valid

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Aug 2009 16:37:19 +0200

cm4all-beng-proxy (0.6.9) unstable; urgency=low

  * direct: disable SPLICE_F_NONBLOCK (temporary NFS EAGAIN workaround)

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Aug 2009 13:52:49 +0200

cm4all-beng-proxy (0.6.8) unstable; urgency=low

  * widget-http: close response body in error code path
  * http-cache: implemented memcached backend (--memcached-server)
  * processor: &c:base; returns the URI without scheme and host

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Aug 2009 12:29:19 +0200

cm4all-beng-proxy (0.6.7) unstable; urgency=low

  * file-handler: generate Expires from xattr user.MaxAge
  * cmdline: added option --set to configure:
    - max_connections
    - http_cache_size
    - filter_cache_size
    - translate_cache_size
  * flush caches on SIGHUP

 -- Max Kellermann <mk@cm4all.com>  Fri, 07 Aug 2009 11:41:10 +0200

cm4all-beng-proxy (0.6.6) unstable; urgency=low

  * added missing GLib build dependency
  * cgi-handler: set the "body_consumed" flag

 -- Max Kellermann <mk@cm4all.com>  Tue, 04 Aug 2009 09:53:01 +0200

cm4all-beng-proxy (0.6.5) unstable; urgency=low

  * shm: pass MAP_NORESERVE to mmap()
  * proxy-handler: support cookies
  * translation: added DISCARD_SESSION packet

 -- Max Kellermann <mk@cm4all.com>  Wed, 15 Jul 2009 18:00:33 +0200

cm4all-beng-proxy (0.6.4) unstable; urgency=low

  * http-client: don't read response body in HEAD requests
  * ajp-client: invoke the "abort" handler on error
  * filter-cache: lock cache items while they are served
